# project_cloud

./: .gitignore  README.md  pipeline.sh  pipeline_departures.sh  pipeline_reporting.sh  pyproject.toml  template.yaml
data/20251017/: departures.json
src/: .env  api_temps_reel.py  clean_data.py  main.py  sncf_api.py
src/API/: trafic.py
src/project_cloud/: __init__.py
src/project_cloud/agregation/: agregation_parkings.py  agregation_sncf.py  agregation_trafic.py  main.py
src/project_cloud/api/: main.py
src/project_cloud/dashboards/: main.py  main_page.py  traffic_dashboard.py
src/project_cloud/dashboards/.streamlit/: secrets.toml
src/project_cloud/dashboards/pages/: departures.py  main.py  parkings.py  traffic.py
src/project_cloud/departures/: main.py  process_s3_to_dynamodb.py
src/project_cloud/parking/: get_parkings_by_ingestion_time.py  main.py  process_s3_to_dynamodb.py
src/project_cloud/reporting/: main.py
src/project_cloud/sncf/: clean_data.py  sncf_api.py
src/project_cloud/traffic/: main.py  process_s3_to_dynamodb.py
src/project_cloud/utils/: utils_dynamodb.py  utils_pd.py  utils_s3.py
